@@ -59,3 +59,5 @@
     people can omit Q_OBJECT intentionally.
   - Added -only-qt option, which will make clazy bailout early on non-Qt files.
     For this purpose, the definition of a Qt file is whenever -DQT_CORE_LIB is passed, which is usually the case in most build systems.
+  - Added -qt-developer option, when building Qt with clazy it will honour specific guidelines for Qt, which are not many right now but the
+    list will grow.
